src/objects/Training_Event_Internal_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  Training_Event__r.Account__c  , Training_Event__r.Account__r.Name , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Communications__c</fullName>
        <description>The client was pleased with the trainer’s communication before the training?</description>
        <globalPicklist>Agree_Scale_1_5</globalPicklist>
        <inlineHelpText>The client was pleased with the trainer’s communication before the training?</inlineHelpText>
        <label>Client Communications</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Content__c</fullName>
        <description>The client was pleased with the content delivered?</description>
        <globalPicklist>Agree_Scale_1_5</globalPicklist>
        <inlineHelpText>The client was pleased with the content delivered?</inlineHelpText>
        <label>Client Content</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Customization__c</fullName>
        <description>The client was pleased with the level of customization the trainer delivered?</description>
        <globalPicklist>Agree_Scale_1_5</globalPicklist>
        <inlineHelpText>The client was pleased with the level of customization the trainer delivered?</inlineHelpText>
        <label>Client Customization</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Engagement__c</fullName>
        <description>The client was pleased with the amount of interaction, engagement and activities?</description>
        <globalPicklist>Agree_Scale_1_5</globalPicklist>
        <inlineHelpText>The client was pleased with the amount of interaction, engagement and activities?</inlineHelpText>
        <label>Client Engagement</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Negative__c</fullName>
        <description>Neutral or negative feedback the client mentioned:</description>
        <inlineHelpText>Neutral or negative feedback the client mentioned:</inlineHelpText>
        <label>Client Negative</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Overall__c</fullName>
        <description>The client’s overall rating of the trainer (1=poor, 3=average and 5=superior)</description>
        <globalPicklist>Agree_Scale_1_5</globalPicklist>
        <inlineHelpText>The client’s overall rating of the trainer (1=poor, 3=average and 5=superior)</inlineHelpText>
        <label>Client Overall</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Positive__c</fullName>
        <description>Positive feedback the client mentioned:</description>
        <inlineHelpText>Positive feedback the client mentioned:</inlineHelpText>
        <label>Client Positive</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Professionalism__c</fullName>
        <description>The client was pleased with trainer’s professionalism and style?</description>
        <globalPicklist>Agree_Scale_1_5</globalPicklist>
        <inlineHelpText>The client was pleased with trainer’s professionalism and style?</inlineHelpText>
        <label>Client Professionalism</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Tailoring__c</fullName>
        <description>The client was pleased with the level of tailoring the trainer delivered?</description>
        <globalPicklist>Agree_Scale_1_5</globalPicklist>
        <inlineHelpText>The client was pleased with the level of tailoring the trainer delivered?</inlineHelpText>
        <label>Client Tailoring</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_interaction__c</fullName>
        <description>How much interaction was there? 
(Strongly Disagree=80 trainer facilitation/20 participant interactivity, Undecided= 50/50 and Strongly Agree=20/80)</description>
        <globalPicklist>Agree_Scale_1_5</globalPicklist>
        <inlineHelpText>How much interaction was there? 
(Strongly Disagree=80 trainer facilitation/20 participant interactivity, Undecided= 50/50 and Strongly Agree=20/80)</inlineHelpText>
        <label>Client interaction</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LOA_Creation__c</fullName>
        <globalPicklist>Agree_Scale_1_5</globalPicklist>
        <label>LOA Creation</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Comments__c</fullName>
        <label>Operations Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Rating_Comments__c</fullName>
        <label>Overall Rating Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <label>Overall Rating</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trainer_Assignment__c</fullName>
        <globalPicklist>Agree_Scale_1_5</globalPicklist>
        <label>Trainer Assignment</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trainer_Comments__c</fullName>
        <label>Trainer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trainer_Customizing__c</fullName>
        <description>The trainer seemed confident in their ability to deliver the customized training as requested?</description>
        <globalPicklist>Agree_Scale_1_5</globalPicklist>
        <inlineHelpText>The trainer seemed confident in their ability to deliver the customized training as requested?</inlineHelpText>
        <label>Trainer Customizing</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trainer_Future_Use__c</fullName>
        <description>Do you think this trainer would do a good job with other clients?</description>
        <globalPicklist>Agree_Scale_1_5</globalPicklist>
        <inlineHelpText>Do you think this trainer would do a good job with other clients?</inlineHelpText>
        <label>Trainer Future Use</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trainer_Initial_Contact__c</fullName>
        <label>Trainer Initial Contact</label>
        <picklist>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trainer_Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  Training_Event__r.Trainer_Assigned__c  , Training_Event__r.Trainer_Assigned__r.FirstName &amp; &quot; &quot; &amp;  Training_Event__r.Trainer_Assigned__r.LastName , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trainer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer_Overall_Comments__c</fullName>
        <label>Trainer Overall Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trainer_Overall_Rating__c</fullName>
        <globalPicklist>Agree_Scale_1_5</globalPicklist>
        <label>Trainer Overall Rating</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trainer_Professionalism__c</fullName>
        <description>The trainer was easy to work with</description>
        <globalPicklist>Agree_Scale_1_5</globalPicklist>
        <inlineHelpText>The trainer was easy to work with</inlineHelpText>
        <label>Trainer Professionalism</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trainer_Responsiveness__c</fullName>
        <description>The trainer was responsive to calls and emails</description>
        <globalPicklist>Agree_Scale_1_5</globalPicklist>
        <inlineHelpText>The trainer was responsive to calls and emails</inlineHelpText>
        <label>Trainer Responsiveness</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trainer_Scheduling__c</fullName>
        <label>Trainer Scheduling</label>
        <picklist>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trainer_Style__c</fullName>
        <description>Please describe the trainer’s style (examples: stoic, professional, trendy, entertaining, boring, etc.):</description>
        <inlineHelpText>Please describe the trainer’s style (examples: stoic, professional, trendy, entertaining, boring, etc.):</inlineHelpText>
        <label>Trainer Style</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trainer_Tailoring__c</fullName>
        <description>The trainer seemed confident in their ability to deliver the training and tailor as requested?</description>
        <globalPicklist>Agree_Scale_1_5</globalPicklist>
        <inlineHelpText>The trainer seemed confident in their ability to deliver the training and tailor as requested?</inlineHelpText>
        <label>Trainer Tailoring</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trainer_Understood_Needs__c</fullName>
        <label>Trainer Understood Needs</label>
        <picklist>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Event__c</fullName>
        <label>Training Event</label>
        <referenceTo>Training_Event__c</referenceTo>
        <relationshipLabel>Training Event Internal Surveys</relationshipLabel>
        <relationshipName>Training_Event_Internal_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Training Event Internal Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Trainer_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Trainer</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Trainer_Name__c</columns>
        <columns>Overall_Rating__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trainer_Name__c</field>
            <operation>contains</operation>
            <value>Andrew Harris</value>
        </filters>
        <label>Trainer</label>
    </listViews>
    <nameField>
        <displayFormat>IntSurv-{000000}</displayFormat>
        <label>Training Event Internal Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Event Internal Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>